step_2 - add Makefile, .gitignore chore(package.json, package-lock.json, brain-games.js): add and update files

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/paultasov/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/paultasov/frontend-project-44/actions)",
+  "description": "Brain Games is a set of five console games built on the principle of popular mobile brain-boosting applications. Each game asks questions to which you have to give correct answers.",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "paultasov <paultasov@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
