--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "author": "paultasov <paultasov@gmail.com>",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
