--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Brain Games is a set of five console games built on the principle of popular mobile brain-boosting applications. Each game asks questions to which you have to give correct answers.",
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"
   },
   "main": "index.js",
   "scripts": {
@@ -19,6 +20,7 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.2.5"
   }
 }
